--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="js/contact.js"></script>
     <script type="php" src="saveContact.php"></script>
 
+    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+
 </head>
 <body>
  
@@ -89,6 +91,7 @@
     <div><h1>Kevin Michael Byrd</h1></div>
     <div><h2>Junior Full Stack Developer</h2></div>
 </div></div>
+<div class="cell"><h2>"Please Visit This Website On A Full Size Screen To See All Features."<br> -Management</h2></div>
 
 
 
