--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="php" src="saveContact.php"></script>
 
     <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+    <link rel="shortcut icon" type="image/png" href="asset/favicon.png">
 
 </head>
 <body>
