--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
 </div>
 <div class="projectParent"><h1>Projects</h1>
 <div class="projects"><a name="projects"></a>
-<div class="projExample1"><div class="overlay"><p>Pokemon Themed Console Application Game - C#</p><button type="submit" onclick="window.location.href = 'https://github.com/KevinByrd-28/PokemonGame';"><img src="asset/click.png"></button></div></div>
-<div class="projExample2"><div class="overlay"><p>Simple StoreFront Website - HTML, CSS, JS</p><button type="submit" onclick="window.location.href = 'https://kevinbyrd-28.github.io/PortfolioExample2/';"><img src="asset/click.png"></button></div></div>
-<div class="projExample4"><div class="overlay"><p>CodePen Creature - CSS</p><button type="submit" onclick="window.location.href = 'https://codepen.io/KevinByrd-28/pen/dyYRXzo';"><img src="asset/click.png"></button></div></div>
+<div class="projExample1"><div class="overlay"><p>Pokemon Console Game - C#</p><button type="submit" onclick="window.location.href = 'https://github.com/KevinByrd-28/PokemonGame';"><img src="asset/click.png"></button></div></div>
+<div class="projExample2"><div class="overlay"><p>Simple StoreFront - HTML, CSS, JS</p><button type="submit" onclick="window.location.href = 'https://kevinbyrd-28.github.io/PortfolioExample2/';"><img src="asset/click.png"></button></div></div>
+<div class="projExample3"><div class="overlay"><p>Business Console Applications - C#</p><button type="submit" onclick="window.location.href = 'https://github.com/KevinByrd-28/GoldBadge_Challenges';"><img src="asset/click.png"></button></div></div>
+<div class="projExample4"><div class="overlay"><p>CodePen Creature - HTML, CSS</p><button type="submit" onclick="window.location.href = 'https://codepen.io/KevinByrd-28/pen/dyYRXzo';"><img src="asset/click.png"></button></div></div>
+
+
 </div>
 </div>
 
