--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#aboutMe"><li>About Me</li></a>
             <a href="#technical"><li>Skills and Technical</li></a>
             <a href="#projects"><li>Projects</li></a>
-            <a href="asset/Portfolio Resume.pdf"><li>Resume</li></a>
+            <a href="asset/PortfolioResume2.pdf"><li>Resume</li></a>
             <a href="" data-toggle="modal" data-target="#contact-modal"><li>Contact Me</li></a>
           </ul>
         </div>
