--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p>I enjoy taking a blended approach to each project I work on. By adapting my natural creativity with my
           ability
           to reason and conceptualize - I can give a unique perspective on the task at hand. <br><br>As a former
-          Anti-Terrorism Officer in the United States Air Force, my range of skills have taken me to the many different
+          Anti-Terrorism Officer in the United States Air Force and former executive protection team-leader, my range of skills have taken me to the many different
           corners of this planet. I am blessed to have experienced the adventures and built the relationships that have
           led me to today.<br><br>I hope that this journey I continue on will leave a legacy for my family and my
           community.</p>
