updated proj area

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row projects"><a name="projects"></a>
           <div class="projExample5">
             <div class="overlay">
-              <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF</p><button type="submit"
+              <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
                 onclick="window.location.href = 'https://kevinbyrd-28.github.io/PortfolioExample2/';"><img
                   src="asset/click.png"></button>
             </div>
