--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
           ability
           to reason and conceptualize - I can give a unique perspective on the task at hand. <br><br>As a former
           Anti-Terrorism Officer in the United States Air Force and former executive protection team-leader, my range of skills have taken me to the many different
-          corners of this planet. I am blessed to have experienced the adventures and built the relationships that have
-          led me to today.<br><br>I hope that this journey I continue on will leave a legacy for my family and my
-          community.</p>
+          corners of this planet. I am blessed to have experienced the adventures and built the relationships that have led me to today.</p>
+          <h3>"It's life that writes the best stories."</h3>
     </div>
 
     <div class="resume3"><a name="technical"></a>
