--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="projExample5">
             <div class="overlay">
               <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
-                onclick="window.location.href = 'https://kevinbyrd-28.github.io/PortfolioExample2/';"><img
+                onclick="window.location.href = 'https://kevinbyrd-28.github.io/iRestaurant2.0/';"><img
                   src="asset/click.png"></button>
             </div>
           </div>
