--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-
+  <meta property="og:image" content="asset/favicon3.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
 </head>
 
 <body>
