attempt to fix smooth scroll

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span></span>
 
           <ul id="menu">
-            <a href="#aboutMe">
+            <a href="#aboutMe" class="button">
               <li>About Me</li>
             </a>
             <a href="#technical">
@@ -244,6 +244,7 @@
   });
   </script>-->
 
+
   <script> var TxtRotate = function (el, toRotate, period) {
       this.toRotate = toRotate;
       this.el = el;
@@ -336,8 +337,9 @@
 
 
 
-
-
+    <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+    <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
+    <script src="zenscroll-min.js"></script> 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   </div>
