--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <h3>"It's life that writes the best stories."</h3>
     </div>
 
-    <div class="resume3"><a name="technical"></a>
+    <div class="resume3" id="technical">
       <h1>Technical Development Skills</h1>
       <div id="skillsParent">
         <div id="skillsChild"><img src="asset/HTML.png"></div>
