fix scroll arrow

--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
         <div>
           <h2>Junior Full Stack Developer</h2>
         </div>
-        <button
-      class="arrow" type="submit" onclick="window.location.href = '#aboutMe'"><img
-        src="asset/arrow.png"></button>
+        <a href="#aboutMe" class="button"><img
+        src="asset/arrow.png"></a>
       </div>
 
     </div>
