--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#projects">
               <li>Projects</li>
             </a>
-            <a href="asset/PortfolioResume2.pdf">
+            <a href="asset/PortfolioResume3.pdf">
               <li>Resume</li>
             </a>
             <a href="" data-toggle="modal" data-target="#contact-modal">
@@ -123,7 +123,7 @@
 
     <div class="cell animate__animated animate__fadeIn animate__delay-3s">
       <button type="submit"
-      onclick="window.location.href = 'asset/PortfolioResume2.pdf';"><img src="asset/curriculum.png"></button>
+      onclick="window.location.href = 'asset/PortfolioResume3.pdf';"><img src="asset/curriculum.png"></button>
       <h2>Please Visit This Website On A Full Size Screen To See All Features.</h2>
     </div>
 
@@ -193,8 +193,8 @@
           </div>
           <div class="projExample1">
             <div class="overlay">
-              <p>Pokemon Console Game - C#</p><button type="submit"
-                onclick="window.location.href = 'https://github.com/KevinByrd-28/PokemonGame';"><img
+              <p>Business Website - HTML, CSS, JS</p><button type="submit"
+                onclick="window.location.href = 'https://thefortisproject.com';"><img
                   src="asset/click.png"></button>
             </div>
           </div>
