--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
           <div class="overlay">
-            <p>WebMVC Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
-              onclick="window.location.href = 'https://kevinbyrd-28.github.io/MeemME/';"><img src="asset/click.png"></button>
+            <p>WebMVC & Azure Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
+              onclick="window.location.href = 'https://meemme.azurewebsites.net/';"><img src="asset/click.png"></button>
           </div>
         </div>
       </div>
