efa added to resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="#projects">
               <li>Projects</li>
             </a>
-            <a href="asset/Kbyrd Resume New.pdf">
+            <a href="asset/KByrd Resume 8_2020.pdf">
               <li>Resume</li>
             </a>
             <a href="" data-toggle="modal" data-target="#contact-modal">
@@ -124,7 +124,7 @@
 
 
     <div class="cell animate__animated animate__fadeIn animate__delay-3s">
-      <button type="submit" onclick="window.location.href = 'asset/Kbyrd Resume New.pdf';"><img
+      <button type="submit" onclick="window.location.href = 'asset/KByrd Resume 8_2020.pdf';"><img
           src="asset/curriculum.png"></button>
       <h2>Please Visit This Website On A Full Size Screen To See All Features.</h2>
     </div>
