--- a/index.html
+++ b/index.html
@@ -160,53 +160,53 @@
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="250" class="projExample4">
           <div class="overlay">
             <p>CodePen Creature - HTML, CSS</p><button type="submit"
-              onclick="window.location.href = 'https://codepen.io/KevinByrd-28/pen/dyYRXzo';"><img
+              onclick="window.open('https://codepen.io/KevinByrd-28/pen/dyYRXzo','_blank');"><img
                 src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="500" class="projExample2">
           <div class="overlay">
             <p>StoreFront Mock Website- HTML, CSS, JS</p><button type="submit"
-              onclick="window.location.href = 'https://kevinbyrd-28.github.io/PortfolioExample2/';"><img
+              onclick="window.open('https://kevinbyrd-28.github.io/PortfolioExample2/','_blank');"><img
                 src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="750" class="projExample3">
           <div class="overlay">
             <p>Simple Console Applications - C#</p><button type="submit"
-              onclick="window.location.href = 'https://github.com/KevinByrd-28/GoldBadge_Challenges';"><img
+              onclick="window.open('https://github.com/KevinByrd-28/GoldBadge_Challenges','_blank');"><img
                 src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1000" class="projExample5">
           <div class="overlay">
             <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
-              onclick="window.location.href = 'https://kevinbyrd-28.github.io/iRestaurant2.0/';"><img
+              onclick="window.open('https://kevinbyrd-28.github.io/iRestaurant2.0/','_blank');"><img
                 src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1250" class="projExample6">
           <div class="overlay">
             <p>Client Website - HTML, CSS, JS</p><button type="submit"
-              onclick="window.location.href = 'https://springtreelandscapes.com';"><img src="asset/click.png"></button>
+              onclick="window.open('https://springtreelandscapes.com','_blank');"><img src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1500" class="projExample8">
           <div class="overlay">
             <p>Console Game "Pokemon"- C#</p><button type="submit"
-              onclick="window.location.href = 'https://kevinbyrd-28.github.io/PokemonGame/';"><img src="asset/click.png"></button>
+              onclick="window.open('https://kevinbyrd-28.github.io/PokemonGame/','_blank');"><img src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1750" class="projExample1">
           <div class="overlay">
             <p>Artistic Informational Website - HTML, CSS, JS</p><button type="submit"
-              onclick="window.location.href = 'https://pandiontactical.com';"><img src="asset/click.png"></button>
+              onclick="window.open('https://pandiontactical.com','_blank');"><img src="asset/click.png"></button>
           </div>
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
           <div class="overlay">
             <p>WebMVC & Azure Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
-              onclick="window.location.href = 'https://meemme.azurewebsites.net/';"><img src="asset/click.png"></button>
+              onclick="window.open('https://meemme.azurewebsites.net/','_blank');"><img src="asset/click.png"></button>
           </div>
         </div>
       </div>
