new tab for resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="#projects">
               <li>Projects</li>
             </a>
-            <a href="asset/KByrd Resume 8_2020.pdf">
+            <a href="asset/KByrd Resume 8_2020.pdf" target="_blank">
               <li>Resume</li>
             </a>
             <a href="" data-toggle="modal" data-target="#contact-modal">
