--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <a href="#projects">
               <li>Projects</li>
             </a>
-            <a href="asset/KByrd Resume 8_2020.pdf" target="_blank">
+            <!--<a href="asset/KByrd Resume 8_2020.pdf" target="_blank">
               <li>Resume</li>
-            </a>
+            </a>-->
             <a href="" data-toggle="modal" data-target="#contact-modal">
               <li>Contact Me</li>
             </a>
@@ -124,8 +124,8 @@
 
 
     <div class="cell animate__animated animate__fadeIn animate__delay-3s">
-      <button type="submit" onclick="window.location.href = 'asset/KByrd Resume 8_2020.pdf';"><img
-          src="asset/curriculum.png"></button>
+      <!--<button type="submit" onclick="window.location.href = 'asset/KByrd Resume 8_2020.pdf';"><img
+          src="asset/curriculum.png"></button>-->
       <h2>Please Visit This Website On A Full Size Screen To See All Features.</h2>
     </div>
 
@@ -166,7 +166,7 @@
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="500" class="projExample2">
           <div class="overlay">
-            <p>StoreFront Mock Website- HTML, CSS, JS</p><button type="submit"
+            <p>StoreFront Mock Website - HTML, CSS, JS</p><button type="submit"
               onclick="window.open('https://kevinbyrd-28.github.io/PortfolioExample2/','_blank');"><img
                 src="asset/click.png"></button>
           </div>
@@ -193,7 +193,7 @@
         </div>
         <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1500" class="projExample8">
           <div class="overlay">
-            <p>Console Game "Pokemon"- C#</p><button type="submit"
+            <p>Console Game "Dokemon" - C#</p><button type="submit"
               onclick="window.open('https://kevinbyrd-28.github.io/PokemonGame/','_blank');"><img src="asset/click.png"></button>
           </div>
         </div>
