--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="entire">
 
     <div id="menu" class="animate__animated animate__slideInLeft animate__delay-3s">
-      <a href="https://www.linkedin.com/in/kevinbyrd123/"><i class="fab fa-facebook-square fa-2x"></i></a>
+      <a href="https://www.facebook.com/kevin.byrd.54379"><i class="fab fa-facebook-square fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/kevinbyrd123/"><i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://github.com/KevinByrd-28"><i class="fab fa-github-alt fa-2x"></i></a>
     </div>
@@ -192,61 +192,53 @@
     <div class="modal" tabindex="-1" id="projects">
       <div class="modal-dialog">
         <div class="modal-content">
-          <h5>Projects</h5>
-      <div class="row projects">
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="250" class="projExample4">
-          <div class="overlay">
-            <p>CodePen Creature - HTML, CSS</p><button type="submit"
-              onclick="window.open('https://codepen.io/KevinByrd-28/pen/dyYRXzo','_blank');"><img
-                src="asset/click.png"></button>
+          <h5>Personal Projects</h5>
+          <div class="row projects">
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="250" class="projExample4">
+              <div class="overlay">
+                <p>CodePen Creature - HTML, CSS</p><button type="submit"
+                  onclick="window.open('https://codepen.io/KevinByrd-28/pen/dyYRXzo','_blank');"><img
+                    src="asset/click.png"></button>
+              </div>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1250" class="projExample6">
+              <div class="overlay">
+                <p>Client Website - HTML, CSS, JS</p><button type="submit"
+                  onclick="window.open('https://springtreelandscapes.com','_blank');"><img
+                    src="asset/click.png"></button>
+              </div>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1750" class="projExample1">
+              <div class="overlay">
+                <p>Artistic Informational Website - HTML, CSS, JS</p><button type="submit"
+                  onclick="window.open('https://pandiontactical.com','_blank');"><img src="asset/click.png"></button>
+              </div>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1000" class="projExample5">
+              <div class="overlay">
+                <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
+                  onclick="window.open('https://kevinbyrd-28.github.io/iRestaurant2.0/','_blank');"><img
+                    src="asset/click.png"></button>
+              </div>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1500" class="projExample8">
+              <div class="overlay">
+                <p>Console Game "Dokemon" - C#</p><button type="submit"
+                  onclick="window.open('https://kevinbyrd-28.github.io/PokemonGame/','_blank');"><img
+                    src="asset/click.png"></button>
+              </div>
+            </div>
+            <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
+              <div class="overlay">
+                <p>WebMVC & Azure Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
+                  onclick="window.open('https://kevinbyrd-28.github.io/MeemME/','_blank');"><img
+                    src="asset/click.png"></button>
+              </div>
+            </div>
           </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="500" class="projExample2">
-          <div class="overlay">
-            <p>StoreFront Mock Website - HTML, CSS, JS</p><button type="submit"
-              onclick="window.open('https://kevinbyrd-28.github.io/PortfolioExample2/','_blank');"><img
-                src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="750" class="projExample3">
-          <div class="overlay">
-            <p>Simple Console Applications - C#</p><button type="submit"
-              onclick="window.open('https://github.com/KevinByrd-28/GoldBadge_Challenges','_blank');"><img
-                src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1000" class="projExample5">
-          <div class="overlay">
-            <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
-              onclick="window.open('https://kevinbyrd-28.github.io/iRestaurant2.0/','_blank');"><img
-                src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1250" class="projExample6">
-          <div class="overlay">
-            <p>Client Website - HTML, CSS, JS</p><button type="submit"
-              onclick="window.open('https://springtreelandscapes.com','_blank');"><img src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1500" class="projExample8">
-          <div class="overlay">
-            <p>Console Game "Dokemon" - C#</p><button type="submit"
-              onclick="window.open('https://kevinbyrd-28.github.io/PokemonGame/','_blank');"><img src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1750" class="projExample1">
-          <div class="overlay">
-            <p>Artistic Informational Website - HTML, CSS, JS</p><button type="submit"
-              onclick="window.open('https://pandiontactical.com','_blank');"><img src="asset/click.png"></button>
-          </div>
-        </div>
-        <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
-          <div class="overlay">
-            <p>WebMVC & Azure Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
-              onclick="window.open('https://meemme.azurewebsites.net/','_blank');"><img src="asset/click.png"></button>
-          </div>
-        </div>
-      </div>
+          <br>
+          <h5>Professional Work</h5>
+            <p>(coming soon)</p>
         </div>
       </div>
     </div>
