--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes>
+  <meta name=" apple-mobile-web-app-capable" content="yes" />
   <title>Kevin Byrd's Portfolio</title>
   <link rel="stylesheet" href="bootstrap.css">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="dist/less.css">
   <link rel="stylesheet" href="dist/SCSS.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link rel="stylesheet" href="style.css">
 
   <script type="text/javascript" src="js/contact.js"></script>
   <script type="php" src="saveContact.php"></script>
@@ -34,19 +34,15 @@
 
     <div id="menu" class="animate__animated animate__slideInLeft animate__delay-3s">
       <a href="https://www.facebook.com/kevin.byrd.54379"><i class="fab fa-facebook-square fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/kevinbyrd123/"><i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://github.com/KevinByrd-28"><i class="fab fa-github-alt fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/kevinbyrd123/"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
 
     <div class="portTopCenter animate__fadeIn">
       <div class="birdie animate__animated animate__bounceInDown animate__delay-2s"><img src="asset/favicon2.png">
       </div>
-      <div>
-        <h1>Kevin Michael Byrd</h1>
-      </div>
-      <div>
-        <h2><i>Creative</i> | <b style="color:#b23b3b;">Full Stack Developer</b> | <i>Designer</i></h2>
-      </div>
+      <h1>Kevin Michael Byrd</h1>
+      <h2><i>Creative</i> | <b style="color:#b23b3b;">Full Stack Developer</b> | <i>Designer</i></h2>
       <div class="buttons">
         <button class="button7" data-toggle="modal" data-target="#skills">
           Technical Skills
@@ -238,7 +234,7 @@
           </div>
           <br>
           <h5>Professional Work</h5>
-            <p>(coming soon)</p>
+          <p>(coming soon)</p>
         </div>
       </div>
     </div>
