--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <h5>Content Managment Systems</h5>
               <div class='rowz'>
                 <div class='skill'>
-                  <p>Wix</p>
+                  <p>Wix and Editor X</p>
                 </div>
                 <div id='tenBar' class='barz'></div>
               </div>
@@ -192,34 +192,34 @@
           <div class="row projects">
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="250" class="projExample4">
               <div class="overlay">
-                <p>CodePen Creature - HTML, CSS</p><button type="submit"
+                <p>CodePen Creature<br>HTML, CSS</p><button type="submit"
                   onclick="window.open('https://codepen.io/KevinByrd-28/pen/dyYRXzo','_blank');"><img
                     src="asset/click.png"></button>
               </div>
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1250" class="projExample6">
               <div class="overlay">
-                <p>Client Website - HTML, CSS, JS</p><button type="submit"
+                <p>Client Website<br>Built on Editor X</p><button type="submit"
                   onclick="window.open('https://springtreelandscapes.com','_blank');"><img
                     src="asset/click.png"></button>
               </div>
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1750" class="projExample1">
               <div class="overlay">
-                <p>Artistic Informational Website - HTML, CSS, JS</p><button type="submit"
+                <p>Client Website<br>HTML, CSS and JS</p><button type="submit"
                   onclick="window.open('https://pandiontactical.com','_blank');"><img src="asset/click.png"></button>
               </div>
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1000" class="projExample5">
               <div class="overlay">
-                <p>Simple WebAPI "iRestaurant" - C#, ASP.NET, EF, REST</p><button type="submit"
+                <p>Simple WebAPI "iRestaurant"<br>C#, ASP.NET, EF and REST</p><button type="submit"
                   onclick="window.open('https://kevinbyrd-28.github.io/iRestaurant2.0/','_blank');"><img
                     src="asset/click.png"></button>
               </div>
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1500" class="projExample8">
               <div class="overlay">
-                <p>Console Game "Dokemon" - C#</p><button type="submit"
+                <p>Console Game "Dokemon"<br>No relation to Pokemon ;)</p><button type="submit"
                   onclick="window.open('https://kevinbyrd-28.github.io/PokemonGame/','_blank');"><img
                     src="asset/click.png"></button>
               </div>
@@ -234,7 +234,7 @@
           </div>
           <br>
           <h5>Professional Work</h5>
-          <p>(coming soon)</p>
+          <p>As a full-stack developer for dynamicWeb, my projects and tasks can very from day to day.  But what I typically explain to people is that our client's want a specific experience to take place on their site in the form of a custom header or custom carousel.  I create those items from their photoshop renderings or ideas.</p>
         </div>
       </div>
     </div>
