--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Technical Skills
         </button>
         <button class="button7" data-toggle="modal" data-target="#projects">
-          Past Projects
+          Projects
         </button>
         <button class="button7" onclick="window.location.href='mailto: kevinbyrd.SD@gmail.com'">
           Request A Quote
@@ -188,7 +188,7 @@
     <div class="modal" tabindex="-1" id="projects">
       <div class="modal-dialog">
         <div class="modal-content">
-          <h5>Personal Projects</h5>
+          <h5>Little Byrd Designs</h5>
           <div class="row projects">
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="250" class="projExample4">
               <div class="overlay">
@@ -226,7 +226,7 @@
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
               <div class="overlay">
-                <p>WebMVC & Azure Project - C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
+                <p>WebMVC & Azure Project<br>C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
                   onclick="window.open('https://kevinbyrd-28.github.io/MeemME/','_blank');"><img
                     src="asset/click.png"></button>
               </div>
@@ -234,7 +234,8 @@
           </div>
           <br>
           <h5>Professional Work</h5>
-          <p>As a full-stack developer for dynamicWeb, my projects and tasks can very from day to day.  But what I typically explain to people is that our client's want a specific experience to take place on their site in the form of a custom header or custom carousel.  I create those items from their photoshop renderings or ideas.</p>
+          <div class="pro-work"><p>As a full-stack developer for dynamicWeb North America, my projects and tasks can very from day to day.  Our client's want a specific experience to take place on their site in the form of a custom header, animations, custom carousel, etc.  I create those items from their photoshop renderings or ideas.  Nearly anything is possible.</p>
+            <p>I am happy to show examples of prior client customizations during an in-person discussion for your business's website. For privacy purposes, I won't share dynamicWeb client information on this portfolio; nor will be able to allow any personal clients to take priority over my dynamicWeb obligations.  However, this affords me the opportunity to help small businesses by creating web solutions at a fraction of the cost of the bigger boutique shops locally.</p></div>
         </div>
       </div>
     </div>
