--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1750" class="projExample1">
               <div class="overlay">
-                <p>Client Website<br>HTML, CSS and JS</p><button type="submit"
+                <p>Client Website<br>HTML, CSS and Javascript</p><button type="submit"
                   onclick="window.open('https://pandiontactical.com','_blank');"><img src="asset/click.png"></button>
               </div>
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="1000" class="projExample5">
               <div class="overlay">
-                <p>Simple WebAPI "iRestaurant"<br>C#, ASP.NET, EF and REST</p><button type="submit"
-                  onclick="window.open('https://kevinbyrd-28.github.io/iRestaurant2.0/','_blank');"><img
+                <p>Client Website<br>Built on Wix</p><button type="submit"
+                  onclick="window.open('https://www.carltoncustoms.com','_blank');"><img
                     src="asset/click.png"></button>
               </div>
             </div>
@@ -226,7 +226,7 @@
             </div>
             <div data-aos="flip-right" data-aos-duration="1500" data-aos-delay="2000" class="projExample7">
               <div class="overlay">
-                <p>WebMVC & Azure Project<br>C#, ASP.NET, EF, REST, BOOTSTRAP, HTML, CSS, JS</p><button type="submit"
+                <p>WebMVC & Azure Project<br>ASP.NET, Razor Pages</p><button type="submit"
                   onclick="window.open('https://kevinbyrd-28.github.io/MeemME/','_blank');"><img
                     src="asset/click.png"></button>
               </div>
